# piton_bank_project

./: README.md
TCPClient/: TCPClient.sln
TCPClient/TCPClient/: Connection.cpp  Connection.h  TCPClient.cpp  TCPClient.vcxproj  TCPClient.vcxproj.filters  TcpClient.h
TCPClient/TCPClient/x64/Debug/: TCPClient.exe.recipe  TCPClient.ilk  vc143.idb
TCPClient/TCPClient/x64/Debug/TCPClient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TCPClient.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TCPServer/: TCPServer.sln
TCPServer/TCPServer/: Bank.cpp  Bank.h  Card.cpp  Card.h  Client.cpp  Client.h  Communication.cpp  Connection.cpp  Connection.h  Customer.cpp  Customer.h  ServiceOperations.cpp  ServiceOperations.h  TCPServer.cpp  TCPServer.h  TCPServer.vcxproj  TCPServer.vcxproj.filters  bank.txt  card.txt  customer.txt
TCPServer/TCPServer/x64/Debug/: TCPServer.exe.recipe  TCPServer.ilk  TCPServer.vcxproj.FileListAbsolute.txt  TCPServer.vcxproj.cppwinrt_comp.cache  TCPServer.vcxproj.cppwinrt_comp.rsp  TCPServer.vcxproj.cppwinrt_plat.rsp  TCPServer.vcxproj.mdmerge.rsp  TCPServer.vcxproj.midlrt.rsp  connection.obj.enc  vc143.idb
TCPServer/TCPServer/x64/Debug/TCPServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TCPServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TCPServer/x64/Debug/: bank.txt  card.txt
piton/TcpServer/: CMakeLists.txt
piton/TcpServer/TcpServer/: Bank.cpp  CMakeLists.txt  Card.cpp  Card.h  ServiceOperations.h  TcpServer.cpp  TcpServer.h  card.txt
(+46 files in other folders)
